--- a/src/components/RecipeCard/RecipeCard.scss
+++ b/src/components/RecipeCard/RecipeCard.scss
@@ -3,7 +3,8 @@
 .RecipeCard {
   border: 1px solid c.$smoky-black;
   border-radius: 10px;
-  width: 250px;
+  padding: 4px;
+  width: 245px;
   background-color: c.$grullo;
   box-shadow: 3px 5px 15px c.$anti-flash-white;
   margin-top: 50px;
